add sems and userinfo APIs
